# rabi-mcp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  SMITHERY_ADVANCED_DEPLOYMENT.md  SMITHERY_DEPLOYMENT.md  SMITHERY_ISSUE_RESOLUTION.md  SMITHERY_MCP_DEPLOYMENT_GUIDE.md  TESTING.md  Untitled-1.txt  docker-compose.yml  error  package.json  pyproject.toml  requirements.txt  run_advanced_server.py  run_diagnostic_server.py  run_minimal_server.py  run_simple_server.py  smithery.yaml  test_docker_build.py  test_mcp_server.py  test_smithery_deployment.py  test_startup.py  test_structure.py
.claude/: settings.local.json
scripts/: deploy_to_smithery.sh  install.sh
src/: __http_main__.py  __main__.py  advanced_server.py  http_server.py  http_server_minimal.py  http_server_simple.py  mcp_server.py  server.py
src/config/: settings.py
src/models/: hamiltonians.py
src/resources/: constants.py
src/tools/: __init__.py  cold_atoms.py  quantum_optics.py  quantum_systems.py  spectroscopy.py  utilities.py  visualization.py
tests/: test_quantum_systems.py
